src/compiler_rewrite/y.output
Terminaux inutilisés dans la grammaire

    FUNDEC


État 1 conflits: 1 décalage/réduction
État 44 conflits: 1 décalage/réduction
État 47 conflits: 1 décalage/réduction


Grammaire

    0 $accept: program $end

    1 program: exp

    2 exp: valexp
    3    | assignexp
    4    | whileexp
    5    | forexp
    6    | BREAK

    7 valexp: lvalue
    8       | constexp
    9       | seqlist
   10       | callexp
   11       | opexp
   12       | recexp
   13       | arrayexp
   14       | letexp
   15       | ifexp

   16 decs: dec
   17     | dec decs

   18 dec: tydecs
   19    | vardec
   20    | fundecs

   21 tydecs: tydec
   22       | tydec tydecs

   23 tydec: TYPE ID EQ ty

   24 ty: ID
   25   | LBRACE tyfields RBRACE
   26   | ARRAY OF ID

   27 tyfields: %empty
   28         | tyfield
   29         | tyfield COMMA tyfields

   30 tyfield: ID COLON ID

   31 vardec: VAR ID ASSIGN exp
   32       | VAR ID COLON ID ASSIGN exp

   33 fundecs: fundec
   34        | fundec fundecs

   35 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   36       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   37 constexp: INT
   38         | STRING
   39         | NIL

   40 lvalue: ID
   41       | ID LBRACK exp RBRACK
   42       | lvalue DOT ID
   43       | lvalue LBRACK exp RBRACK

   44 arrayexp: ID LBRACK exp RBRACK OF exp

   45 seqlist: LPAREN exps RPAREN
   46        | LPAREN RPAREN

   47 exps: exp
   48     | exp SEMICOLON exps

   49 callexp: ID LPAREN RPAREN
   50        | ID LPAREN funcargs RPAREN

   51 funcargs: exp
   52         | exp COMMA funcargs

   53 opexp: valexp PLUS valexp
   54      | valexp MINUS valexp
   55      | valexp TIMES valexp
   56      | valexp DIVIDE valexp
   57      | MINUS valexp
   58      | valexp EQ valexp
   59      | valexp NEQ valexp
   60      | valexp GT valexp
   61      | valexp LT valexp
   62      | valexp GE valexp
   63      | valexp LE valexp
   64      | valexp AND valexp
   65      | valexp OR valexp

   66 recexp: ID LBRACE RBRACE
   67       | ID LBRACE recfields RBRACE

   68 recfields: recfield
   69          | recfield COMMA recfields

   70 recfield: ID EQ exp

   71 assignexp: lvalue ASSIGN exp

   72 ifexp: IF valexp THEN exp
   73      | IF valexp THEN exp ELSE exp

   74 whileexp: WHILE exp DO exp

   75 forexp: FOR ID ASSIGN exp TO exp DO exp

   76 letexp: LET decs IN exps END


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    ID <sval> (258) 23 24 26 30 31 32 35 36 40 41 42 44 49 50 66 67 70 75
    STRING <sval> (259) 38
    INT <ival> (260) 37
    COMMA (261) 29 52 69
    COLON (262) 30 32 36
    SEMICOLON (263) 48
    LPAREN (264) 35 36 45 46 49 50
    RPAREN (265) 35 36 45 46 49 50
    LBRACK (266) 41 43 44
    RBRACK (267) 41 43 44
    LBRACE (268) 25 66 67
    RBRACE (269) 25 66 67
    DOT (270) 42
    PLUS (271) 53
    MINUS (272) 54 57
    TIMES (273) 55
    DIVIDE (274) 56
    EQ (275) 23 35 36 58 70
    NEQ (276) 59
    LT (277) 61
    LE (278) 63
    GT (279) 60
    GE (280) 62
    AND (281) 64
    OR (282) 65
    ASSIGN (283) 31 32 71 75
    ARRAY (284) 26
    IF (285) 72 73
    THEN (286) 72 73
    ELSE (287) 73
    WHILE (288) 74
    FOR (289) 75
    TO (290) 75
    DO (291) 74 75
    LET (292) 76
    IN (293) 76
    END (294) 76
    OF (295) 26 44
    BREAK (296) 6
    NIL (297) 39
    FUNCTION (298) 35 36
    VAR (299) 31 32
    TYPE (300) 23
    EXP (301)
    FUNDEC (302)
    UMINUS (303)
    IFX (304)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (50)
        à gauche: 0
    program <exp> (51)
        à gauche: 1
        à droite: 0
    exp <exp> (52)
        à gauche: 2 3 4 5 6
        à droite: 1 31 32 35 36 41 43 44 47 48 51 52 70 71 72 73 74 75
    valexp <exp> (53)
        à gauche: 7 8 9 10 11 12 13 14 15
        à droite: 2 53 54 55 56 57 58 59 60 61 62 63 64 65 72 73
    decs <decList> (54)
        à gauche: 16 17
        à droite: 17 76
    dec <dec> (55)
        à gauche: 18 19 20
        à droite: 16 17
    tydecs <nametyList> (56)
        à gauche: 21 22
        à droite: 18 22
    tydec <namety> (57)
        à gauche: 23
        à droite: 21 22
    ty <ty> (58)
        à gauche: 24 25 26
        à droite: 23
    tyfields <fieldList> (59)
        à gauche: 27 28 29
        à droite: 25 29 35 36
    tyfield <field> (60)
        à gauche: 30
        à droite: 28 29
    vardec <dec> (61)
        à gauche: 31 32
        à droite: 19
    fundecs <fundecList> (62)
        à gauche: 33 34
        à droite: 20 34
    fundec <fundec> (63)
        à gauche: 35 36
        à droite: 33 34
    constexp <exp> (64)
        à gauche: 37 38 39
        à droite: 8
    lvalue <var> (65)
        à gauche: 40 41 42 43
        à droite: 7 42 43 71
    arrayexp <exp> (66)
        à gauche: 44
        à droite: 13
    seqlist <exp> (67)
        à gauche: 45 46
        à droite: 9
    exps <expList> (68)
        à gauche: 47 48
        à droite: 45 48 76
    callexp <exp> (69)
        à gauche: 49 50
        à droite: 10
    funcargs <expList> (70)
        à gauche: 51 52
        à droite: 50 52
    opexp <exp> (71)
        à gauche: 53 54 55 56 57 58 59 60 61 62 63 64 65
        à droite: 11
    recexp <exp> (72)
        à gauche: 66 67
        à droite: 12
    recfields <efieldList> (73)
        à gauche: 68 69
        à droite: 67 69
    recfield <efield> (74)
        à gauche: 70
        à droite: 68 69
    assignexp <exp> (75)
        à gauche: 71
        à droite: 3
    ifexp <exp> (76)
        à gauche: 72 73
        à droite: 15
    whileexp <exp> (77)
        à gauche: 74
        à droite: 4
    forexp <exp> (78)
        à gauche: 75
        à droite: 5
    letexp <exp> (79)
        à gauche: 76
        à droite: 14


État 0

    0 $accept: . program $end

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    WHILE   décalage et aller à l'état 7
    FOR     décalage et aller à l'état 8
    LET     décalage et aller à l'état 9
    BREAK   décalage et aller à l'état 10
    NIL     décalage et aller à l'état 11

    program    aller à l'état 12
    exp        aller à l'état 13
    valexp     aller à l'état 14
    constexp   aller à l'état 15
    lvalue     aller à l'état 16
    arrayexp   aller à l'état 17
    seqlist    aller à l'état 18
    callexp    aller à l'état 19
    opexp      aller à l'état 20
    recexp     aller à l'état 21
    assignexp  aller à l'état 22
    ifexp      aller à l'état 23
    whileexp   aller à l'état 24
    forexp     aller à l'état 25
    letexp     aller à l'état 26


État 1

   40 lvalue: ID .
   41       | ID . LBRACK exp RBRACK
   44 arrayexp: ID . LBRACK exp RBRACK OF exp
   49 callexp: ID . LPAREN RPAREN
   50        | ID . LPAREN funcargs RPAREN
   66 recexp: ID . LBRACE RBRACE
   67       | ID . LBRACE recfields RBRACE

    LPAREN  décalage et aller à l'état 27
    LBRACK  décalage et aller à l'état 28
    LBRACE  décalage et aller à l'état 29

    LBRACK    [réduction par utilisation de la règle 40 (lvalue)]
    $défaut  réduction par utilisation de la règle 40 (lvalue)


État 2

   38 constexp: STRING .

    $défaut  réduction par utilisation de la règle 38 (constexp)


État 3

   37 constexp: INT .

    $défaut  réduction par utilisation de la règle 37 (constexp)


État 4

   45 seqlist: LPAREN . exps RPAREN
   46        | LPAREN . RPAREN

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    RPAREN  décalage et aller à l'état 30
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    WHILE   décalage et aller à l'état 7
    FOR     décalage et aller à l'état 8
    LET     décalage et aller à l'état 9
    BREAK   décalage et aller à l'état 10
    NIL     décalage et aller à l'état 11

    exp        aller à l'état 31
    valexp     aller à l'état 14
    constexp   aller à l'état 15
    lvalue     aller à l'état 16
    arrayexp   aller à l'état 17
    seqlist    aller à l'état 18
    exps       aller à l'état 32
    callexp    aller à l'état 19
    opexp      aller à l'état 20
    recexp     aller à l'état 21
    assignexp  aller à l'état 22
    ifexp      aller à l'état 23
    whileexp   aller à l'état 24
    forexp     aller à l'état 25
    letexp     aller à l'état 26


État 5

   57 opexp: MINUS . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 33
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 6

   72 ifexp: IF . valexp THEN exp
   73      | IF . valexp THEN exp ELSE exp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 35
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 7

   74 whileexp: WHILE . exp DO exp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    WHILE   décalage et aller à l'état 7
    FOR     décalage et aller à l'état 8
    LET     décalage et aller à l'état 9
    BREAK   décalage et aller à l'état 10
    NIL     décalage et aller à l'état 11

    exp        aller à l'état 36
    valexp     aller à l'état 14
    constexp   aller à l'état 15
    lvalue     aller à l'état 16
    arrayexp   aller à l'état 17
    seqlist    aller à l'état 18
    callexp    aller à l'état 19
    opexp      aller à l'état 20
    recexp     aller à l'état 21
    assignexp  aller à l'état 22
    ifexp      aller à l'état 23
    whileexp   aller à l'état 24
    forexp     aller à l'état 25
    letexp     aller à l'état 26


État 8

   75 forexp: FOR . ID ASSIGN exp TO exp DO exp

    ID  décalage et aller à l'état 37


État 9

   76 letexp: LET . decs IN exps END

    FUNCTION  décalage et aller à l'état 38
    VAR       décalage et aller à l'état 39
    TYPE      décalage et aller à l'état 40

    decs     aller à l'état 41
    dec      aller à l'état 42
    tydecs   aller à l'état 43
    tydec    aller à l'état 44
    vardec   aller à l'état 45
    fundecs  aller à l'état 46
    fundec   aller à l'état 47


État 10

    6 exp: BREAK .

    $défaut  réduction par utilisation de la règle 6 (exp)


État 11

   39 constexp: NIL .

    $défaut  réduction par utilisation de la règle 39 (constexp)


État 12

    0 $accept: program . $end

    $end  décalage et aller à l'état 48


État 13

    1 program: exp .

    $défaut  réduction par utilisation de la règle 1 (program)


État 14

    2 exp: valexp .
   53 opexp: valexp . PLUS valexp
   54      | valexp . MINUS valexp
   55      | valexp . TIMES valexp
   56      | valexp . DIVIDE valexp
   58      | valexp . EQ valexp
   59      | valexp . NEQ valexp
   60      | valexp . GT valexp
   61      | valexp . LT valexp
   62      | valexp . GE valexp
   63      | valexp . LE valexp
   64      | valexp . AND valexp
   65      | valexp . OR valexp

    PLUS    décalage et aller à l'état 49
    MINUS   décalage et aller à l'état 50
    TIMES   décalage et aller à l'état 51
    DIVIDE  décalage et aller à l'état 52
    EQ      décalage et aller à l'état 53
    NEQ     décalage et aller à l'état 54
    LT      décalage et aller à l'état 55
    LE      décalage et aller à l'état 56
    GT      décalage et aller à l'état 57
    GE      décalage et aller à l'état 58
    AND     décalage et aller à l'état 59
    OR      décalage et aller à l'état 60

    $défaut  réduction par utilisation de la règle 2 (exp)


État 15

    8 valexp: constexp .

    $défaut  réduction par utilisation de la règle 8 (valexp)


État 16

    7 valexp: lvalue .
   42 lvalue: lvalue . DOT ID
   43       | lvalue . LBRACK exp RBRACK
   71 assignexp: lvalue . ASSIGN exp

    LBRACK  décalage et aller à l'état 61
    DOT     décalage et aller à l'état 62
    ASSIGN  décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 7 (valexp)


État 17

   13 valexp: arrayexp .

    $défaut  réduction par utilisation de la règle 13 (valexp)


État 18

    9 valexp: seqlist .

    $défaut  réduction par utilisation de la règle 9 (valexp)


État 19

   10 valexp: callexp .

    $défaut  réduction par utilisation de la règle 10 (valexp)


État 20

   11 valexp: opexp .

    $défaut  réduction par utilisation de la règle 11 (valexp)


État 21

   12 valexp: recexp .

    $défaut  réduction par utilisation de la règle 12 (valexp)


État 22

    3 exp: assignexp .

    $défaut  réduction par utilisation de la règle 3 (exp)


État 23

   15 valexp: ifexp .

    $défaut  réduction par utilisation de la règle 15 (valexp)


État 24

    4 exp: whileexp .

    $défaut  réduction par utilisation de la règle 4 (exp)


État 25

    5 exp: forexp .

    $défaut  réduction par utilisation de la règle 5 (exp)


État 26

   14 valexp: letexp .

    $défaut  réduction par utilisation de la règle 14 (valexp)


État 27

   49 callexp: ID LPAREN . RPAREN
   50        | ID LPAREN . funcargs RPAREN

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    RPAREN  décalage et aller à l'état 64
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    WHILE   décalage et aller à l'état 7
    FOR     décalage et aller à l'état 8
    LET     décalage et aller à l'état 9
    BREAK   décalage et aller à l'état 10
    NIL     décalage et aller à l'état 11

    exp        aller à l'état 65
    valexp     aller à l'état 14
    constexp   aller à l'état 15
    lvalue     aller à l'état 16
    arrayexp   aller à l'état 17
    seqlist    aller à l'état 18
    callexp    aller à l'état 19
    funcargs   aller à l'état 66
    opexp      aller à l'état 20
    recexp     aller à l'état 21
    assignexp  aller à l'état 22
    ifexp      aller à l'état 23
    whileexp   aller à l'état 24
    forexp     aller à l'état 25
    letexp     aller à l'état 26


État 28

   41 lvalue: ID LBRACK . exp RBRACK
   44 arrayexp: ID LBRACK . exp RBRACK OF exp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    WHILE   décalage et aller à l'état 7
    FOR     décalage et aller à l'état 8
    LET     décalage et aller à l'état 9
    BREAK   décalage et aller à l'état 10
    NIL     décalage et aller à l'état 11

    exp        aller à l'état 67
    valexp     aller à l'état 14
    constexp   aller à l'état 15
    lvalue     aller à l'état 16
    arrayexp   aller à l'état 17
    seqlist    aller à l'état 18
    callexp    aller à l'état 19
    opexp      aller à l'état 20
    recexp     aller à l'état 21
    assignexp  aller à l'état 22
    ifexp      aller à l'état 23
    whileexp   aller à l'état 24
    forexp     aller à l'état 25
    letexp     aller à l'état 26


État 29

   66 recexp: ID LBRACE . RBRACE
   67       | ID LBRACE . recfields RBRACE

    ID      décalage et aller à l'état 68
    RBRACE  décalage et aller à l'état 69

    recfields  aller à l'état 70
    recfield   aller à l'état 71


État 30

   46 seqlist: LPAREN RPAREN .

    $défaut  réduction par utilisation de la règle 46 (seqlist)


État 31

   47 exps: exp .
   48     | exp . SEMICOLON exps

    SEMICOLON  décalage et aller à l'état 72

    $défaut  réduction par utilisation de la règle 47 (exps)


État 32

   45 seqlist: LPAREN exps . RPAREN

    RPAREN  décalage et aller à l'état 73


État 33

   53 opexp: valexp . PLUS valexp
   54      | valexp . MINUS valexp
   55      | valexp . TIMES valexp
   56      | valexp . DIVIDE valexp
   57      | MINUS valexp .
   58      | valexp . EQ valexp
   59      | valexp . NEQ valexp
   60      | valexp . GT valexp
   61      | valexp . LT valexp
   62      | valexp . GE valexp
   63      | valexp . LE valexp
   64      | valexp . AND valexp
   65      | valexp . OR valexp

    $défaut  réduction par utilisation de la règle 57 (opexp)


État 34

    7 valexp: lvalue .
   42 lvalue: lvalue . DOT ID
   43       | lvalue . LBRACK exp RBRACK

    LBRACK  décalage et aller à l'état 61
    DOT     décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 7 (valexp)


État 35

   53 opexp: valexp . PLUS valexp
   54      | valexp . MINUS valexp
   55      | valexp . TIMES valexp
   56      | valexp . DIVIDE valexp
   58      | valexp . EQ valexp
   59      | valexp . NEQ valexp
   60      | valexp . GT valexp
   61      | valexp . LT valexp
   62      | valexp . GE valexp
   63      | valexp . LE valexp
   64      | valexp . AND valexp
   65      | valexp . OR valexp
   72 ifexp: IF valexp . THEN exp
   73      | IF valexp . THEN exp ELSE exp

    PLUS    décalage et aller à l'état 49
    MINUS   décalage et aller à l'état 50
    TIMES   décalage et aller à l'état 51
    DIVIDE  décalage et aller à l'état 52
    EQ      décalage et aller à l'état 53
    NEQ     décalage et aller à l'état 54
    LT      décalage et aller à l'état 55
    LE      décalage et aller à l'état 56
    GT      décalage et aller à l'état 57
    GE      décalage et aller à l'état 58
    AND     décalage et aller à l'état 59
    OR      décalage et aller à l'état 60
    THEN    décalage et aller à l'état 74


État 36

   74 whileexp: WHILE exp . DO exp

    DO  décalage et aller à l'état 75


État 37

   75 forexp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  décalage et aller à l'état 76


État 38

   35 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   36       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  décalage et aller à l'état 77


État 39

   31 vardec: VAR . ID ASSIGN exp
   32       | VAR . ID COLON ID ASSIGN exp

    ID  décalage et aller à l'état 78


État 40

   23 tydec: TYPE . ID EQ ty

    ID  décalage et aller à l'état 79


État 41

   76 letexp: LET decs . IN exps END

    IN  décalage et aller à l'état 80


État 42

   16 decs: dec .
   17     | dec . decs

    FUNCTION  décalage et aller à l'état 38
    VAR       décalage et aller à l'état 39
    TYPE      décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 16 (decs)

    decs     aller à l'état 81
    dec      aller à l'état 42
    tydecs   aller à l'état 43
    tydec    aller à l'état 44
    vardec   aller à l'état 45
    fundecs  aller à l'état 46
    fundec   aller à l'état 47


État 43

   18 dec: tydecs .

    $défaut  réduction par utilisation de la règle 18 (dec)


État 44

   21 tydecs: tydec .
   22       | tydec . tydecs

    TYPE  décalage et aller à l'état 40

    TYPE      [réduction par utilisation de la règle 21 (tydecs)]
    $défaut  réduction par utilisation de la règle 21 (tydecs)

    tydecs  aller à l'état 82
    tydec   aller à l'état 44


État 45

   19 dec: vardec .

    $défaut  réduction par utilisation de la règle 19 (dec)


État 46

   20 dec: fundecs .

    $défaut  réduction par utilisation de la règle 20 (dec)


État 47

   33 fundecs: fundec .
   34        | fundec . fundecs

    FUNCTION  décalage et aller à l'état 38

    FUNCTION  [réduction par utilisation de la règle 33 (fundecs)]
    $défaut  réduction par utilisation de la règle 33 (fundecs)

    fundecs  aller à l'état 83
    fundec   aller à l'état 47


État 48

    0 $accept: program $end .

    $défaut  accepter


État 49

   53 opexp: valexp PLUS . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 84
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 50

   54 opexp: valexp MINUS . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 85
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 51

   55 opexp: valexp TIMES . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 86
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 52

   56 opexp: valexp DIVIDE . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 87
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 53

   58 opexp: valexp EQ . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 88
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 54

   59 opexp: valexp NEQ . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 89
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 55

   61 opexp: valexp LT . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 90
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 56

   63 opexp: valexp LE . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 91
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 57

   60 opexp: valexp GT . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 92
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 58

   62 opexp: valexp GE . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 93
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 59

   64 opexp: valexp AND . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 94
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 60

   65 opexp: valexp OR . valexp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    LET     décalage et aller à l'état 9
    NIL     décalage et aller à l'état 11

    valexp    aller à l'état 95
    constexp  aller à l'état 15
    lvalue    aller à l'état 34
    arrayexp  aller à l'état 17
    seqlist   aller à l'état 18
    callexp   aller à l'état 19
    opexp     aller à l'état 20
    recexp    aller à l'état 21
    ifexp     aller à l'état 23
    letexp    aller à l'état 26


État 61

   43 lvalue: lvalue LBRACK . exp RBRACK

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    WHILE   décalage et aller à l'état 7
    FOR     décalage et aller à l'état 8
    LET     décalage et aller à l'état 9
    BREAK   décalage et aller à l'état 10
    NIL     décalage et aller à l'état 11

    exp        aller à l'état 96
    valexp     aller à l'état 14
    constexp   aller à l'état 15
    lvalue     aller à l'état 16
    arrayexp   aller à l'état 17
    seqlist    aller à l'état 18
    callexp    aller à l'état 19
    opexp      aller à l'état 20
    recexp     aller à l'état 21
    assignexp  aller à l'état 22
    ifexp      aller à l'état 23
    whileexp   aller à l'état 24
    forexp     aller à l'état 25
    letexp     aller à l'état 26


État 62

   42 lvalue: lvalue DOT . ID

    ID  décalage et aller à l'état 97


État 63

   71 assignexp: lvalue ASSIGN . exp

    ID      décalage et aller à l'état 1
    STRING  décalage et aller à l'état 2
    INT     décalage et aller à l'état 3
    LPAREN  décalage et aller à l'état 4
    MINUS   décalage et aller à l'état 5
    IF      décalage et aller à l'état 6
    WHILE   décalage et aller à l'état 7
    FOR     décalage et aller à l'état 8
    LET     décalage et aller à l'état 9
    BREAK   décalage et aller à l'état 10
    NIL     décalage et aller à l'état 11

    exp        aller à l'état 98
    valexp     aller à l'état 14
    constexp   aller à l'état 15
    lvalue     aller à l'état 16
    arrayexp   aller à l'état 17
    seqlist    aller à l'état 18
    callexp    aller à l'état 19
    opexp      aller à l'état 20
    recexp     aller à l'état 21
    assignexp  aller à l'état 22
    ifexp      aller à l'état 23
    whileexp   aller à l'état 24
    forexp     aller à l'état 25
    letexp     aller à l'état 26


État 64

   49 callexp: ID LPAREN RPAREN .

    $défaut  réduction par utilisation de la règle 49 (callexp)


État 65

   51 funcargs: exp .
   52         | exp . COMMA funcargs

    COMMA  décalage et aller à l'état 99

    $défaut  réduction par utilisation de la règle 51 (funcargs)


État 66

   50 callexp: ID LPAREN funcargs . RPAREN

    RPAREN  décalage et aller à l'état 100


État 67

   41 lvalue: ID LBRACK exp . RBRACK
   44 arrayexp: ID LBRACK exp . RBRACK OF exp

    RBRACK  décalage et aller à l'état 101


État 68

   70 recfield: ID . EQ exp

    EQ  décalage et aller à l'état 102


État 69

   66 recexp: ID LBRACE RBRACE .

    $défaut  réduction par utilisation de la règle 66 (recexp)


État 70

   67 recexp: ID LBRACE recfields . RBRACE

    RBRACE  décalage et aller à l'état 103


État 71

   68 recfields: recfield .
   69          | recfield . COMMA recfields

    COMMA  décalage et aller à l'état 104
